<resources>
    <string name="app_name">JvHeWangLuo-master</string>
    <string name="tv_homeMall">商城</string>
    <string name="tv_homeNearby">附近</string>
    <string name="tv_homeFind">发现</string>
    <string name="tv_homeMessage">聊天</string>
    <string name="tv_homePersonal">个人中心</string>

    <string name="action_shopCart">购物车</string>
    <string name="tip_nearByMalls">附近商场</string>

    <string name="tab_find">发现</string>
    <string name="tab_request">需求</string>
    <string name="IndustryClassification">行业分类：</string>
    <string name="action_attention">关注</string>
    <string name="action_attentioned">已关注</string>

    <string name="type_publishFind">发现</string>
    <string name="type_publishRequest">需求</string>
    <string name="type_upload">上传商品</string>

    <string name="title_nearbyShop">附近的店铺</string>
    <string name="tv_myLocation">我的位置：</string>

    <string name="title_request">需求</string>
    <string name="title_find">发现</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_exchangeCard">交换名片</string>
    <string name="action_talkWithShop">聊天</string>
    <string name="action_card">名片</string>
    <string name="action_intoShop">进入店铺</string>
    <string name="strongth">优势</string>
    <string name="title_shopInfo">商家信息</string>
    <string name="publish">发布</string>
    <string name="tv_goodsLink">商品链接</string>
    <string name="title_homePersonal">个人中心</string>
    <string name="title_myCardDetail">我的名片</string>
    <string name="action_editMyCard">编辑</string>
    <string name="tv_ourstrong">我们的优势</string>
    <string name="title_otherCard">名片</string>
    <string name="action_toMyCard">我的名片</string>


    <!--发布我的发现界面-->
    <string name="tv_pleaseFillInMyFindMsg">请填写我的发现信息</string>
    <string name="tv_selectClassification">选择分类</string>
    <string name="tv_publishFindContent">发现的文字描述：</string>
    <string name="tv_publishFindAddPicture">添加图片：</string>
    <string name="tv_publishFindAddLinkGood">添加商品链接：</string>
    <string name="action_queryPublish">确认发布</string>
    <string name="et_publishFindContent">输入需求的详细描述</string>
    <string name="title_publishMyFind">发布我的发现</string>

</resources>
