<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FindRequestDetailActivity">


    <include layout="@layout/layout_title"
        android:id="@+id/layout_title"/>

    <ImageView
        android:id="@+id/iv_head"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/layout_title"
        android:scaleType="centerInside"
        android:src="@mipmap/icon_find_request_head" />

    <LinearLayout
        android:id="@+id/linearLayout_actionAttention"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/layout_title"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_shape_inwhite_outorange_01"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_actionAttention"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"
            android:src="@mipmap/icon_find_request_attention" />

        <TextView
            android:id="@+id/tv_actionAttention"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorOrange_FFFF8623"
            android:text="@string/action_attention" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/layout_title"
        android:layout_toLeftOf="@id/linearLayout_actionAttention"
        android:layout_toRightOf="@id/iv_head"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="李晓华"
        android:textColor="@color/colorBlack_FF323232"
        android:textSize="@dimen/textFontSize_16" />

    <TextView
        android:id="@+id/tv_shopName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/iv_head"
        android:layout_marginLeft="10dp"
        android:layout_toLeftOf="@id/linearLayout_actionAttention"
        android:layout_toRightOf="@id/iv_head"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="杭州乡里乡亲科技有限公司"
        android:textColor="@color/colorBlack_FF646464"
        android:textSize="@dimen/textFontSize_14" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_head"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:ellipsize="end"
        android:text="本店新到货10台戴尔办公用计算机，20英寸屏幕，谈妥后可以当天送货。需要的老板可以联系我！"
        android:textColor="@color/colorBlack_FF323232"
        android:textSize="@dimen/textFontSize_14" />

    <LinearLayout
        android:id="@+id/linearLayout_bottomState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout_imageViewContainer01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linearLayout_imageViewContainer02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:visibility="gone" />


        <LinearLayout
            android:id="@+id/linearLayout_imageViewContainer03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/dividingLineColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/tv_timePublish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="2016-06-16 10:50"
                android:textColor="@color/colorBlack_FF999999"
                android:textSize="@dimen/textFontSize_14" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_viewNum"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/icon_find_request_viewnum" />

                <TextView
                    android:id="@+id/tv_viewNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/colorBlack_FF646464"
                    android:text="998"
                    android:textSize="@dimen/textFontSize_14" />
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:background="@color/dividingLineColor"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_likeNum"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/icon_find_request_like_unslect" />

                <TextView
                    android:id="@+id/tv_likeNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="998"
                    android:textColor="@color/colorBlack_FF646464"
                    android:textSize="@dimen/textFontSize_14" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:background="@color/dividingLineColor"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_msgNum"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/icon_find_request_msgnum" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/colorBlack_FF646464"
                    android:text="留言"
                    android:textSize="@dimen/textFontSize_14" />
                <TextView
                    android:id="@+id/tv_msgNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack_FF646464"
                    android:text="(998)"
                    android:textSize="@dimen/textFontSize_14" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/dividingLineColor" />


        <RelativeLayout
            android:id="@+id/relativeLayout_goodsLink"
            android:layout_width="match_parent"
            android:layout_height="125dp">

            <TextView
                android:id="@+id/tv_goodsLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_goodsLink"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/textFontSize_14"
                android:textColor="@color/colorBlack_FF323232"/>

            <ImageView
                android:id="@+id/iv_goodsImg"
                android:layout_width="81dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/tv_goodsLink"
                android:scaleType="centerInside"
                android:src="@mipmap/home_goods_picture1"/>

            <TextView
                android:id="@+id/tv_goodsName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_goodsLink"
                android:layout_alignTop="@id/iv_goodsImg"
                android:layout_toRightOf="@id/iv_goodsImg"
                android:maxLines="2"
                android:text="Apple MacBook Air 11.6英寸笔记本电脑Core i5 处理器 4GB内存/128G闪存 MJVM2ZP/A"
                android:layout_marginLeft="15dp"
                android:textSize="@dimen/textFontSize_14"
                android:textColor="@color/colorBlack_FF646464"/>

            <TextView
                android:id="@+id/tv_goodsNewPrices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_goodsName"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/iv_goodsImg"
                android:text="¥5200.00"
                android:maxLines="1"
                android:layout_marginLeft="15dp"
                android:textSize="@dimen/textFontSize_18"
                android:textColor="@color/colorRed_FFE83821"/>

            <TextView
                android:id="@+id/tv_goodsOriginPrices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/iv_goodsImg"
                android:layout_toRightOf="@id/iv_goodsImg"
                android:text="¥6800.00"
                android:maxLines="1"
                android:layout_marginLeft="15dp"
                android:textSize="@dimen/textFontSize_12"
                android:textColor="@color/colorBlack_FF999999"/>
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/dividingLineColor"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:background="@color/colorWhite_FFFFFFFF"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayout_exchangeCard"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:background="@color/colorRed_FFFF0000"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@mipmap/icon_exchange_card"
                android:scaleType="centerInside"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite_FFFFFFFF"
                android:text="@string/action_exchangeCard"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_talkWithshop"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:background="@color/colorRed_FFFF0000"
            android:layout_marginLeft="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@mipmap/icon_talk_withshop"
                android:scaleType="centerInside"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite_FFFFFFFF"
                android:text="@string/action_talkWithShop"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_marginTop="10dp"
        android:layout_below="@id/linearLayout_bottomState"
        android:layout_above="@id/linearLayout_bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>
